--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -309,7 +309,7 @@ outlierhighplayer <- 6 + 1.5*(6-4)
 outlierlowplayer <- 4-1.5*(6-4)
 board_games%>%
   select(average_rating, max_players) |> 
-  filter(max_players > outlierlowplayer, max_players < outlierhighplayer) |> 
+  filter(!is.na(max_players), max_players > outlierlowplayer, max_players < outlierhighplayer) |> 
 ggplot(aes(x = average_rating, y = max_players)) + 
 geom_point(color = "yellow") + 
   geom_smooth(method = "gam", se = TRUE) +  # Add line of best fit
