--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -323,4 +323,6 @@ geom_point(color = "yellow") +
 ## Question 2: 
 There is a slight positive correlation betweeen play time of games and its average rating. This means that overall, the longer the play time, the higher the average rating. However, there are many games with the same play time but has different ratings. 
 There is no significant correlation between numbers of users rating the game and the game's average rating. However, the graph appears to be skewed to the left. 
-The correlation between maximum number of players and average rating is very interest. Despite the line of best fit showing a negative correlation, all games visualized have a maximum player number that is an integer between 2 and 8. This makes sense as a game cannot have a fraction of a player. Games that have the same number of players have vastly different ratings though. 
+The correlation between maximum number of players and average rating is very interest. Despite the line of best fit showing a negative correlation, all games visualized have a maximum player number that is an integer between 2 and 8. This makes sense as a game cannot have a fraction of a player. Games that have the same number of players have vastly different ratings though. The negative correlation seems to be caused by the fact that there are very few games with extremely low ratings. 
+Based on these observations, it is concluded that play time have the greatest correlation with average rating, in that average rating increases with play time. 
+However, it is important to remember that since correlation does not equal causation, having a longer play time would not necessarily make the average rating happen. But it there really is causation, this relationship may be explained by longer games having more and better qualitied playable content than shorter ones. 
