--- a/BoardGamesFinalProject.qmd
+++ b/BoardGamesFinalProject.qmd
@@ -149,7 +149,7 @@ This is the data dictionary for this data set
 
 # Research Questions
 
-The research questions we intend to answer are **for each decade what primary game category had the highest user rating** and **between `average_playtime`, number of users rated, and max player which has the greatest correlation with average rating**. To answer the first question, we will assume that the first category listed in `category` is the primary game category. We will create a new variable called `primary_category` that stores the split category column. We use `lubridate` change `year_published` into datetime object with January 1st as default date. Then we'll use `floor_date()` to find what decade each game was released in.
+The research questions we intend to answer are **for each decade what primary game category had the highest user rating** and **between `average_playtime`, number of users rated, and max player which has the greatest correlation with average rating**. To answer the first question, we will assume that the first category listed in `category` is the primary game category. We will create a new variable called `primary_category` that stores the split category column. We use `lubridate` change `year_published` into datetime object with a default date being placed. Then we plan to group all the decades together to find the average rating for each category in each decade. Then make 7 bar charts for each decade that exists to see which games have the best rating. 
 
 # Cleaning Methods
 
@@ -270,7 +270,13 @@ for (decade in unique_decades) {
 
 ```
 
+
+
+
+
 ## Research Question 2
+
+For the second research questions we plan to make three graphs that compares each variable with `average_rating` to see which has the greatest correlation with `average_rating`.
 
 # The First Scatterplot, `playing_time` vs `average_rating`
 ```{r}
@@ -317,12 +323,14 @@ geom_point(color = "yellow") +
       x = "Average Rating", 
       y = "Maximum Players")
 ```
-
-# Conclusion
-## Question 1: 
-## Question 2: 
 There is a slight positive correlation betweeen play time of games and its average rating. This means that overall, the longer the play time, the higher the average rating. However, there are many games with the same play time but has different ratings. 
 There is no significant correlation between numbers of users rating the game and the game's average rating. However, the graph appears to be skewed to the left. 
 The correlation between maximum number of players and average rating is very interest. Despite the line of best fit showing a negative correlation, all games visualized have a maximum player number that is an integer between 2 and 8. This makes sense as a game cannot have a fraction of a player. Games that have the same number of players have vastly different ratings though. The negative correlation seems to be caused by the fact that there are very few games with extremely low ratings. 
 Based on these observations, it is concluded that play time have the greatest correlation with average rating, in that average rating increases with play time. 
 However, it is important to remember that since correlation does not equal causation, having a longer play time would not necessarily make the average rating happen. But it there really is causation, this relationship may be explained by longer games having more and better qualitied playable content than shorter ones. 
+
+# Conclusion
+
+We found that overall after the 1960's that games that are part of the American Civil WAr are alwasy in the top five. In fact the board games that are rated highly since the 1960's seem to all either be war related games or be related to a cultural trend. One example is in the 1980's the second highest rated category is space exploration with fits with the trend of science fiction that was emerging due to the moon landing 5 years prior. In the 1970's the best rated games are those related to the Vietnam War this could be related to how during the early 70's many Americans were beginning to hate being apart of the Vietnam War and these board games could be anti-Vietnam war related which would have connect to Americans. Also since the war ends in 1975 it means that it is still part of the mainstream giving people all sorts of stories and lessons to make board games from. 
+Also we found that the games with longer play times have the more correlation with the average rating of a game. This could be that since peope are playing the game long they are able to get a better experience with their friends and family leading to overall high ratings as when they think back they can think of many moments. Long board games also have the ability to be more complex as they have more time to implement more mechanics for people to experiment with. With more complexity it also leads to more replay ability as each time someone plays the game they can do it differently. Replay ability typically means that people can play it more times in one sitting without switching to another game. These are just some reason on why we think that there is a positive correlation between play time and average rating. 
+
